tests/build/widget_new/no_default_when_assigned3.stderr
error: property `cursor` is not assigned and has no default value
 --> $DIR/no_default_when_assigned3.rs:7:19
  |
7 |         when self.cursor == CursorIcon::Hand { }
  |                   ^^^^^^

warning: unused import: `zero_ui::core::window::CursorIcon`
 --> $DIR/no_default_when_assigned3.rs:1:5
  |
1 | use zero_ui::core::window::CursorIcon;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default
